issue with click event handler on mobiles was fixed

--- a/src/styles/modules/file/file.scss
+++ b/src/styles/modules/file/file.scss
@@ -48,6 +48,7 @@
 
    &__body {
       flex: 1 0;
+      position: relative;
    }
 
    // .file__textarea
@@ -56,8 +57,32 @@
       width: 100%;
       height: 100%;
       border: none;
-      padding: 20px 40px;
+      padding: 20px;
       font-size: 25px;
+   }
+
+   // .file__status
+
+   &__status{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding: 5px 0;
+      text-align: center;
+      font-size: 20px;
+      background: white;
+      display: none;
+      &.active{
+         display: block;
+      }
+
+      &.succes{
+         background: #0ced0c;
+      }
+      &.fail{
+         background: red;
+      }
    }
 }
 
